# I-Sound-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
HRIR/: BKwHA_s.sofa
Libraries/: CMakeLists.txt
Source/: AudioFrame.h  CMakeLists.txt  Constants.h  ErrorList.h  RingBuffer.h  RingDeque.h
Source/Actions/: Action.h  PostEvent.h  StopEvent.h
Source/AudioFormats/: WavFile.cpp  WavFile.h
Source/AudioPackage/: PackageDecoder.cpp  PackageDecoder.h  PackageEncoder.cpp  PackageEncoder.h  PackageManager.cpp  PackageManager.h
Source/Events/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventParser.cpp  EventParser.h
Source/Events/FilterParsers/: DeserializeFilter.h  Deserialized3DSound.h  DeserializedDistance.cpp  DeserializedDistance.h  DeserializedITD.cpp  DeserializedITD.h  DeserializedOpus.cpp  DeserializedOpus.h  DeserializedPCM.cpp  DeserializedPCM.h  DeserializedSound.cpp  DeserializedSound.h  Deserialzied3DSound.cpp
Source/Filters/: ConvolutionFreq.h  DistanceAttenuation.h  DualFilter.h  Filter.h  HRIRCalculator.h  ITD.h  OpusContainer.h  SoundContainer.h  WavContainer.h
Source/Filters/Biqaud/: Biquad.h  DualBiquad.h  FirstOrderLowpass.h  LinkwitzRileyLowpass.h  SecondOrderLowpass.h
Source/IO/Linux/: MemoryMappedFileLinux.cpp
Source/Interface/: ISoundEngine.cpp  ISoundEngine.h
Source/RealTimeAudio/: RealTimeAudio.cpp  RealTimeAudio.h
Source/RealTimeParameters/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  IVector3.h  Transform.h
Testing/: CMakeLists.txt  TestDriver.cpp
Testing/Modules/: ContainerModule.cpp  EventModule.cpp  EventModule.h  FilterModule.cpp  FilterModule.h  PackageModule.cpp  PackageModule.h  RealTimeAudioModule.cpp  RealTimeAudioModule.h  SofaModule.h
Testing/TestFiles/: EventLevel.json  EventLevelBoth.json  EventLevelOpus.json
Tools/: CMakeLists.txt
Tools/SOFAConverter/: CMakeLists.txt  SOFAConverter.cpp  SOFAConverter.h
old/: fft.cpp
